# pcml-run26-2601

./: .env.example  .gitignore  README.md  pyproject.toml
modules/mlfp01/colab/: ex_1.ipynb  ex_2.ipynb  ex_3.ipynb  ex_4.ipynb  ex_5.ipynb  ex_6.ipynb  ex_7.ipynb  ex_8.ipynb
modules/mlfp01/colab-selfcontained/: ex_1.ipynb  ex_2.ipynb  ex_3.ipynb  ex_4.ipynb  ex_5.ipynb  ex_6.ipynb  ex_7.ipynb  ex_8.ipynb
modules/mlfp01/local/: ex_7.py  ex_8.py
modules/mlfp01/solutions/: ex_7.py  ex_8.py
modules/mlfp02/colab/: ex_1.ipynb  ex_2.ipynb  ex_3.ipynb  ex_4.ipynb  ex_5.ipynb  ex_6.ipynb  ex_7.ipynb  ex_8.ipynb
modules/mlfp02/colab-selfcontained/ex_1/: 01_probability_mle.ipynb  02_bayes_theorem.ipynb  03_conjugate_priors.ipynb  04_intervals.ipynb
modules/mlfp02/colab-selfcontained/ex_2/: 01_clt_sampling.ipynb  02_mle_fisher.ipynb  03_map_estimation.ipynb  04_mle_failures.ipynb  05_model_selection.ipynb
modules/mlfp02/colab-selfcontained/ex_3/: 01_bootstrap_power.ipynb  02_hypothesis_testing.ipynb  03_multiple_testing.ipynb  04_permutation_test.ipynb
modules/mlfp02/colab-selfcontained/ex_4/: 01_experiment_design.ipynb  02_srm_detection.ipynb  03_welchs_ttest.ipynb  04_validity_adaptive.ipynb
modules/mlfp02/colab-selfcontained/ex_5/: 01_ols_from_scratch.ipynb  02_diagnostics.ipynb  03_weighted_ls.ipynb  04_model_enrichment.ipynb
modules/mlfp02/colab-selfcontained/ex_6/: 01_logistic_from_scratch.ipynb  02_interpretation.ipynb  03_classification_metrics.ipynb  04_calibration_anova.ipynb
modules/mlfp02/colab-selfcontained/ex_7/: 01_cuped.ipynb  02_bayesian_ab.ipynb  03_sequential_testing.ipynb  04_diff_in_diff.ipynb
modules/mlfp02/colab-selfcontained/ex_8/: 01_feature_schema.ipynb  02_point_in_time.ipynb  03_rolling_features.ipynb  04_modeling_lineage.ipynb
modules/mlfp02/local/ex_7/: 01_cuped.py  02_bayesian_ab.py  03_sequential_testing.py  04_diff_in_diff.py
modules/mlfp02/local/ex_8/: 04_modeling_lineage.py
modules/mlfp02/solutions/ex_7/: 01_cuped.py  02_bayesian_ab.py  03_sequential_testing.py  04_diff_in_diff.py
modules/mlfp02/solutions/ex_8/: 04_modeling_lineage.py
modules/mlfp03/colab/: ex_1.ipynb  ex_2.ipynb  ex_3.ipynb  ex_4.ipynb  ex_5.ipynb  ex_6.ipynb  ex_7.ipynb  ex_8.ipynb
modules/mlfp03/colab-selfcontained/ex_1/: 01_feature_engineering.ipynb  02_filter_selection.ipynb  03_wrapper_selection.ipynb  04_embedded_selection.ipynb  05_validation_and_tracking.ipynb
modules/mlfp03/colab-selfcontained/ex_2/: 01_bias_variance.ipynb  02_ridge_regression.ipynb  03_lasso_elasticnet.ipynb  04_cross_validation.ipynb  05_learning_curves.ipynb
modules/mlfp03/colab-selfcontained/ex_3/: 01_svm.ipynb  02_knn.ipynb  03_naive_bayes.ipynb  04_decision_tree.ipynb  05_random_forest.ipynb  06_model_zoo.ipynb
modules/mlfp03/colab-selfcontained/ex_4/: 01_boosting_theory.ipynb  02_xgboost.ipynb  03_lightgbm_catboost.ipynb  04_boosting_tuning.ipynb
modules/mlfp03/colab-selfcontained/ex_5/: 01_metrics_and_baseline.ipynb  02_sampling_strategies.ipynb  03_loss_functions.ipynb  04_threshold_optimisation.ipynb  05_calibration.ipynb
modules/mlfp03/colab-selfcontained/ex_6/: 01_shap_global.ipynb  02_permutation_importance.ipynb  03_lime_local.ipynb  04_shap_interactions.ipynb  05_fairness_audit.ipynb
modules/mlfp03/colab-selfcontained/ex_7/: 01_workflow_builder.ipynb  02_dataflow_persistence.ipynb  03_hyperparameter_search.ipynb  04_model_registry.ipynb  05_orchestrated_pipeline.ipynb
modules/mlfp03/colab-selfcontained/ex_8/: 01_conformal_prediction.ipynb  02_drift_monitoring.ipynb  03_model_card.ipynb  04_deployment_pipeline.ipynb  05_production_readiness.ipynb
modules/mlfp03/local/ex_3/: 06_model_zoo.py
modules/mlfp03/local/ex_4/: 04_boosting_tuning.py
modules/mlfp03/local/ex_5/: 05_calibration.py
modules/mlfp03/local/ex_6/: 05_fairness_audit.py
modules/mlfp03/local/ex_7/: 01_workflow_builder.py  03_hyperparameter_search.py  04_model_registry.py  05_orchestrated_pipeline.py
modules/mlfp03/local/ex_8/: 02_drift_monitoring.py  04_deployment_pipeline.py  05_production_readiness.py
modules/mlfp03/solutions/ex_3/: 06_model_zoo.py
modules/mlfp03/solutions/ex_4/: 04_boosting_tuning.py
modules/mlfp03/solutions/ex_5/: 05_calibration.py
modules/mlfp03/solutions/ex_6/: 05_fairness_audit.py
modules/mlfp03/solutions/ex_7/: 01_workflow_builder.py  03_hyperparameter_search.py  04_model_registry.py  05_orchestrated_pipeline.py
modules/mlfp03/solutions/ex_8/: 02_drift_monitoring.py  04_deployment_pipeline.py  05_production_readiness.py
modules/mlfp04/colab/: ex_1.ipynb  ex_2.ipynb  ex_3.ipynb  ex_4.ipynb  ex_5.ipynb  ex_6.ipynb  ex_7.ipynb  ex_8.ipynb
modules/mlfp04/colab-selfcontained/ex_1/: 01_kmeans.ipynb  02_hierarchical.ipynb  03_density_based.ipynb  04_spectral.ipynb  05_evaluation_profiling.ipynb
modules/mlfp04/colab-selfcontained/ex_2/: 01_em_from_scratch.ipynb  02_sklearn_gmm.ipynb  03_covariance_types.ipynb  04_mixture_of_experts.ipynb
modules/mlfp04/colab-selfcontained/ex_3/: 01_pca.ipynb  02_kernel_pca.ipynb  03_tsne.ipynb  04_umap.ipynb  05_comparison.ipynb
modules/mlfp04/colab-selfcontained/ex_4/: 01_statistical_methods.ipynb  02_isolation_forest.ipynb  03_local_outlier_factor.ipynb  04_ensemble_blending.ipynb
modules/mlfp05/colab/: ex_1.ipynb  ex_2.ipynb  ex_3.ipynb  ex_4.ipynb  ex_5.ipynb  ex_6.ipynb  ex_7.ipynb  ex_8.ipynb
modules/mlfp05/colab-selfcontained/: README.md
modules/mlfp05/diagnostic-reference/: README.md
modules/mlfp05/quiz/: README.md  mlfp05_quiz.ipynb  quiz_harness.py
modules/mlfp06/colab/: ex_1.ipynb  ex_2.ipynb  ex_3.ipynb  ex_4.ipynb  ex_5.ipynb  ex_6.ipynb  ex_7.ipynb  ex_8.ipynb
shared/: kailash_helpers.py  run_profile.py
shared/mlfp02/: ex_8.py
shared/mlfp03/: ex_1.py  ex_7.py
shared/mlfp05/: __init__.py  ex_1.py  ex_2.py  ex_3.py  ex_4.py  ex_5.py  ex_6.py  ex_7.py  ex_8.py
shared/mlfp06/: _ollama_bootstrap.py  ex_1.py  ex_2.py  ex_3.py  ex_4.py  ex_5.py  ex_6.py  ex_7.py  ex_8.py
shared/mlfp06/diagnostics/: __init__.py  _judges.py  agent.py  observatory.py  retrieval.py
(+261 files in other folders)
